@@ -10,7 +10,6 @@ To Do:
 - print charts
 - key bindings
 - key binding scripting
-- zero toggle
 
 
 Maybe some day:
