@@ -76,7 +76,10 @@
 
 - Bar position is restored if chart is reloaded. No longer resets to the last bar.
 
+- Changed chart type name from "Point and Figure" to "P&F" to help shorten the width of the chart type
+  combobox.
 
+  
 0.22
 ====
 
